looked at report

--- a/ExampleFile.tex
+++ b/ExampleFile.tex
@@ -33,11 +33,11 @@
 
 
 \title{the influence of the species density and turbulence intensity on the separation over a bluff body in a turbulent pipe flow}
-\paperID{CFD 2017}
-\author{Ola}{Nordmann} %{forename}{surname}
+\paperID{CFD 2018}
+\author{Toos}{van Gool} %{forename}{surname}
 \presenting  %the previous author is presenting the paper (name becomes underlined)
-\address{SINTEF Materials and Chemistry, 7465 Trondheim, NORWAY}%affiliation of the previous author
-\email{ola.nordmann@sintef.no}%e-mail address of the previous author
+\address{University of Technology, Department of Mechanical Engineering, Eindhoven, NETHERLANDS}%affiliation of the previous author
+\email{c.e.a.g.v.gool@student.tue.nl}%e-mail address of the previous author
 \author{Oscar}{Meijer}
 \address{University of Technology, Department of Mechanical Engineering, Eindhoven, NETHERLANDS}
 \email{o.c.meijer@student.tue.nl}
@@ -51,7 +51,7 @@
 
 
 \abstract{
-  This file is an example \LaTeX file for submission to CFD2017.  A
+  This file is an example \LaTeX file for submission to CFD2018.  A
   limit of 15 pages applies (submitted file size < 10MB).
 }
 \keywords{
@@ -74,8 +74,7 @@ A complete list of symbols used, with dimensions, is required.
 Industrial applications often make use of homogeneously mixed fluids or gases. PUT LITTLE EXAMPLE HERE.\\
 
 
-
-The aim of this research is to find the influence of species density and turbulence intensity on the separation. A fluid or gas entering the system may include a total of $N$ species. amidst the $N$ species, there may be groups of species with identical density. Computational Fluid Dynamics (CFD) is used to solve the system of equations. For this particular problem, the mass, momentum and energy equations are solved (NOG MEER??). The simulations are performed for fully developed turbulent and incompressible flows. The turbulence is modelled trhough a $\kappa-\epsilon$ model.\\
+The aim of this research is to find the influence of species density and turbulence intensity on fluid separation. A fluid or gas entering the system may include a total of $N$ species. Amongst the $N$ species, there may be groups of species with identical density. Computational Fluid Dynamics (CFD) is used to solve the system of equations. For this particular problem, the mass, momentum and energy equations are solved (NOG MEER??). The simulations are performed for fully developed turbulent and incompressible flows. The turbulence is modelled by means of a $\kappa-\epsilon$ model.\\
 \newline
 SOME PIECE ABOUT EXPECTATIONS??\\
 \newline
