--- a/References.bib
+++ b/References.bib
@@ -7,8 +7,6 @@
   month = 	 {February 29-31}}
 
 
-
-
 @Article{Luke1988,
   author = 	 {T. Luke},
   title = 	 {A new technique for Stencil publishing},
@@ -17,3 +15,14 @@
   volume = 	 5,
   pages = 	 {179-221}}
 
+@Book{Versteeg2007,
+	author = 	 {H.K. Versteeg and W. Malalasekera},
+	booktitle = 	 {An Introduction to Computational Fluid Dynamics},
+	year = 	 2007,
+	address = 	 {Edinburgh Gate, Harlow, England}}
+	
+@Slides{slides,
+	author = 	 {N.G. Deen},
+	title = 	 {Introduction to Computational Fluid Dynamics},
+	course = 	 {4RM00},
+	year = 	 2017-2018}
