--- a/ExampleFile.tex
+++ b/ExampleFile.tex
@@ -32,7 +32,7 @@
 
 
 
-\title{the influence of the species density and turbulence intensity on the separation over a bluff body in a turbulent pipe flow}
+\title{The influence of a bluff body in a turbulent flow.}
 \paperID{CFD 2018}
 \author{Toos}{van Gool} %{forename}{surname}
 \presenting  %the previous author is presenting the paper (name becomes underlined)
@@ -55,7 +55,7 @@
   limit of 15 pages applies (submitted file size < 10MB).
 }
 \keywords{
-  CFD, Turbulence, Species, Separation
+  CFD, Turbulence, Bluff body
 }
 \normalfont\normalsize
 
@@ -101,14 +101,14 @@ The flow is considered turbulent if the Reynolds number exceeds a value of 2300.
 \frac{\partial \rho \phi}{\partial t} + div(\rho\phi\mathbf u)= div(\Gamma grad \phi)+S_{\phi}
 \end{equation}
 Equation \ref{unsteadConvDiff} consists of four parts. The first part is the time dependent term, the second part represents the convection, the third part the diffusion and the last part of the equation is the sink and or source term. $\phi$ is the transport term, $\Gamma$ is the diffusion or conduction coefficient. The transport term changes according to the equation to be solved. \\
-One of the most important requirements for a set of equations is the conservation mass, momentum and energy. All conservation equations are derived in case of incompressible flow. The conservation of mass can be extracted from Equation\ref{unsteadConvDiff}, and results in \cite{slides}:\vspace{2mm}
+The conservation of mass, momentum and energy play a major role in a CFD code. All conservation equations are derived for the case of an incompressible flow. The conservation of mass can be extracted from Equation\ref{unsteadConvDiff}, and results in \cite{slides}:\vspace{2mm}
 
 \emph{Mass balance}
 \begin{equation}
 \label{MassBal}
 \frac{\partial \rho }{\partial t} + div(\rho\mathbf u)= 0
 \end{equation}
-The conservation of momentum needs to be solved in two directions, $x$ and $y$, since it is a two dimensional problem. The general form for the momentum conservation is treated as:\vspace{2mm}
+For a two dimensional problem, the conservation of momentum needs to be solved in two directions, $x$ and $y$. The general form for the momentum conservation is treated as:\vspace{2mm}
 
 \emph{Momentum balance}
 \begin{equation}
@@ -126,22 +126,22 @@ The last conservation equation is the conservation of energy, and can be compute
 \rho C_p\frac{D T }{D t} = div(k \hspace{1mm}grad\hspace{1mm}T) +S_i 
 \end{equation}
 
-Note that in equation\ref{EnerBal} the heating by viscous dissipation is assumed to be zero. The viscous dissipation can be neglected if the velocity gradients within the domain are small. (DIT NOG EVEN GOED CHECKEN).\\
-Since this study regards a turbulent flow, the mass and momentum equations have to be sloved in a different manner. This is done by taking the Reynolds average approach. In the Reynolds average approach the mean velocity is determined and the turbulence is described by a fluctuation around the mean velocity. Therefore, components in the convection-diffution and conservation equations are decomposed in a mean and a fluctuation variable. The decomposed variables are given in Equation \ref{decomposed}.\vspace{2mm}
+Note that in equation \ref{EnerBal} the heat release by viscous dissipation is assumed to be zero. The viscous dissipation can be neglected if the velocity gradients within the domain are small. (DIT NOG EVEN GOED CHECKEN).\\
+Since this study regards a turbulent flow, the mass and momentum equations have to be solved in a different manner. This is done by taking the Reynolds average approach. In the Reynolds average approach the mean velocity is determined and the turbulence is described by a fluctuation around the mean velocity. Therefore, components in the convection-diffusion and conservation equations are decomposed in a mean and a fluctuation variable. The decomposed variables are given in Equation \ref{decomposed}.\vspace{2mm}
 
 \emph{Decomposed variables}
 \begin{equation}
 \label{decomposed}
 u=U+u'; \hspace{4mm} v = V+v'; \hspace{4mm} w=W+w'; \hspace{4mm} p=P+p' 
 \end{equation}
-In here, $U$, $V$ and $W$ are mean the velocities in $x$, $y$ and $z$ direction respectively. $P$ is the average pressure. the apostroph terms are the fluctuating components. The average term is given by Equation \ref{Uavg}.\vspace{2mm}
+In here, $U$, $V$ and $W$ are mean the velocities in $x$, $y$ and $z$ direction respectively. $P$ is the average pressure. the apostrophe terms are the fluctuating components. The average term is given by Equation \ref{Uavg}.\vspace{2mm}
 
 \emph{Average velocity}
 \begin{equation}
 \label{Uavg}
 U = \frac{1}{\Delta t}\int_{0}^{\Delta t}u(t)dt
 \end{equation}
-The other average terms are calculated in the same manner. After computing the decomposed variables, they are subsituted into the system of equations. The time averaged part in Equation \ref{Uavg} transforms the regular Navier-Stokes equations into time averaged Navier-Stokes equations, also called Reynolds averaged Navier-Stokes equations (RANS). By using RANS, a new definition is introduced called Reynolds stresses. The Reynolds stresses are present in all directions, and are calculated by Equation \ref{ReStress} \cite{slides}. \vspace{2mm}
+The other average terms are calculated in the same manner. After computing the decomposed variables, they are substituted into the system of equations. The time averaged part in Equation \ref{Uavg} transforms the regular Navier-Stokes equations into time averaged Navier-Stokes equations, also called Reynolds averaged Navier-Stokes equations (RANS). By using RANS, a new definition is introduced called Reynolds stresses. The Reynolds stresses are present in all directions, and are calculated by Equation \ref{ReStress} \cite{slides}. \vspace{2mm}
 
 \emph{Reynolds stresses}
 \begin{equation}
@@ -192,7 +192,7 @@ C_{\mu}=0.09 \hspace{4mm} \sigma_{\kappa}=1.00\hspace{4mm}\sigma_{\epsilon}=1.30
 
 
 \subsubsection{discretization of governing equations}
-To solve the turbulence model, all of the partial differential equations (PDE's) need to be solved. Solving a PDE takes a few steps. First of all let us consider a two dimensional grid consisting of several grid cells. To find the value for $\phi$ from Equation \ref{unsteadConvDiff} at a center point P of the grid cell, one needs the values of the neighbouring cells. In CFD these values are called north(N), west(W), south(S) and east(E). Thereafter, Equation \ref{unsteadConvDiff} is integrated over the control volume, yielding the results shown in Equation \ref{intergrated}.\vspace{2mm}
+To solve the turbulence model, all of the partial differential equations (PDE's) need to be solved. Solving a PDE takes a few steps. First of all let us consider a two dimensional grid consisting of several grid cells. To find the value for $\phi$ from Equation \ref{unsteadConvDiff} at a centre point P of the grid cell, one needs the values of the neighbouring cells. In CFD these values are called north(N), west(W), south(S) and east(E). Thereafter, Equation \ref{unsteadConvDiff} is integrated over the control volume, yielding the results shown in Equation \ref{intergrated}.\vspace{2mm}
 DEZE FUNCTIE NOG EENS NAKIJKEN WANT DIE IS MOEILIJK\\
 \emph{Intergrated diffusion convection equation}
 \begin{equation}
@@ -215,7 +215,7 @@ Substitution variables $F$ and $D$ into Equation \ref{intergrated} forms Equatio
 \label{Substituted}
 \frac{\rho_P^0 \Delta V}{\Delta t}\phi_P=a_W\phi_W+a_E\phi_E+a_S\phi_S+a_N\phi_N +\Delta F
 \end{equation}
-The coefficients of $a$ are dependent on the differencing scheme. The discretization scheme has some properties. First propertie is the conservativeness which means the flux $\phi$ leaving a control volume has to be equal to the flux $\phi$ entering the controle volume through the same face. By using a hybrid differencing scheme, the conservativeness is automatically satisfied. The second property is the boundedness. The boundedness describes the value of $\phi$ in case there is no source term. In that case, the nodal value of $\phi$ must be equal to the value of $\phi$ at the boundary. Besides the restricted value of $\phi$, the coefficients $a$ of the discretized equation must have equal signs. The last important property is the transportiveness. This requires that the transportiveness changes according to the magnitude of the Peclet number ($Pe=F/D$). Hence, if Pe is zero, $\phi$ equally diffuses in all directions. The hybrid differencing scheme satisfies the three properties. However, this comes at the price of only first order accuracy \cite{Versteeg2007}.
+The coefficients of $a$ are dependent on the differencing scheme. The discretization scheme has some properties. First property is the conservativeness which means the flux $\phi$ leaving a control volume has to be equal to the flux $\phi$ entering the control volume through the same face. By using a hybrid differencing scheme, the conservativeness is automatically satisfied. The second property is the boundedness. The boundedness describes the value of $\phi$ in case there is no source term. In that case, the nodal value of $\phi$ must be equal to the value of $\phi$ at the boundary. Besides the restricted value of $\phi$, the coefficients $a$ of the discretized equation must have equal signs. The last important property is the transportiveness. This requires that the transportiveness changes according to the magnitude of the P\`{e}clet number ($Pe=F/D$). Hence, if Pe is zero, $\phi$ equally diffuses in all directions. The hybrid differencing scheme satisfies the three properties. However, this comes at the price of only first order accuracy \cite{Versteeg2007}.
 
 \section{Geometry}
 
