matlab shizzle en report

--- a/ExampleFile.tex
+++ b/ExampleFile.tex
@@ -292,10 +292,10 @@ In Figures \ref{fig:Geometry} and \ref{fig:Geometry} it can be seen how figures 
 In Table \ref{tab:label} it is seen how we can include a table.
 The table is constructed in the file table.tex, where also the table caption and label are defined.
 
-\InsFig{convergence_x10_y20}{Turbulent inlet profile}{conv_1}[H]
-\InsFig{convergence_x20_y40}{Turbulent inlet profile}{conv_2}[H]
-\InsFig{convergence_x40_y80}{Turbulent inlet profile}{conv_3}[H]
-\InsFig{convergence_x80_y160}{Turbulent inlet profile}{conv_4}[H]
+\InsFig{convergence_x10_y20}{Turbulent inlet profile}{conv_1}
+\InsFig{convergence_x20_y40}{Turbulent inlet profile}{conv_2}
+\InsFig{convergence_x40_y80}{Turbulent inlet profile}{conv_3}
+\InsFig{convergence_x80_y160}{Turbulent inlet profile}{conv_4}
 \InsFig{Re_finest}{Reynolds number}{Re}
 \newpage
 \InsTab{Table}
