updated to newest assignment
updated to newest assignment

--- a/report/References.bib
+++ b/report/References.bib
@@ -32,3 +32,11 @@
 	booktitle = 	 {An Introduction to Fluid Mechanics},
 	year = 	 2003,
 	address = 	 {32 Avenue of the Americas, New York, NY 10013-2473, USA}}
+
+@Journal{buildingTurb,
+	author = 	 {L. Li and P. W. Chan},
+	title = 	 {Numerical simulation study of the effect of buildings and complex terrain on the low-level winds at an airport in typhoon situation},
+	journal = 	 {Meteorol. Zeitschrift},
+	year = 	 2012,
+	volume = 	 21,
+	pages = 	 {183-192}}
