--- a/report/ExampleFile.tex
+++ b/report/ExampleFile.tex
@@ -32,7 +32,7 @@
 
 
 
-\title{The influence of a bluff body in a turbulent flow.}
+\title{The influence of a bluff body in a turbulent flow on the mixing of fluids}
 \paperID{CFD 2018}
 \author{Toos}{van Gool} %{forename}{surname}
 \presenting  %the previous author is presenting the paper (name becomes underlined)
@@ -71,10 +71,10 @@ A complete list of symbols used, with dimensions, is required.
 
 
 \section{Introduction}
-Industrial applications often make use of homogeneously mixed fluids or gases. PUT LITTLE EXAMPLE HERE.\\
+Within industrial applications, mixing of fluids is a well known phenomenon. Mixing fluids can be initiated by a propeller, driven by a motor, or by obstacles in a flow. A simple example is the mixing of two paint colors. starting with half a tank of blue paint and the other half yellow paint, will result in a completely green paint.\\
+This study focusses on the quality of mixing. Mainly the influence of the bluff-body size and its influence on the mixing quality. The mixing quality can be measured at the outlet of the geometry by looking at the value of the mixture fraction.
 
-
-The aim of this research is to find the influence of species density and turbulence intensity on fluid separation. A fluid or gas entering the system may include a total of $N$ species. Amongst the $N$ species, there may be groups of species with identical density. Computational Fluid Dynamics (CFD) is used to solve the system of equations. For this particular problem, the mass, momentum and energy equations are solved (NOG MEER??). The simulations are performed for fully developed turbulent and incompressible flows. The turbulence is modelled by means of a $\kappa-\epsilon$ model.\\
+Computational Fluid Dynamics (CFD) is used to solve the system of equations. For this particular problem, the mass, momentum and transport equations are solved. The simulations are performed for fully developed turbulent and incompressible flows. The turbulence is modelled by means of a $\kappa-\epsilon$ model.\\
 \newline
 SOME PIECE ABOUT EXPECTATIONS??\\
 \newline
@@ -101,7 +101,7 @@ The flow is considered turbulent if the Reynolds number exceeds a value of 2300.
 \frac{\partial \rho \phi}{\partial t} + div(\rho\phi\mathbf u)= div(\Gamma grad \phi)+S_{\phi}
 \end{equation}
 Equation \ref{unsteadConvDiff} consists of four parts. The first part is the time dependent term, the second part represents the convection, the third part the diffusion and the last part of the equation is the sink and or source term. $\phi$ is the transport term, $\Gamma$ is the diffusion or conduction coefficient. The transport term changes according to the equation to be solved. \\
-The conservation of mass, momentum and energy play a major role in a CFD code. All conservation equations are derived for the case of an incompressible flow. The conservation of mass can be extracted from Equation \ref{unsteadConvDiff}, and results in \cite{slides}:\vspace{2mm}
+The conservation of mass, momentum and fraction play a major role in a CFD code. All conservation equations are derived for the case of an incompressible flow. The conservation of mass can be extracted from Equation \ref{unsteadConvDiff}, and results in \cite{slides}:\vspace{2mm}
 
 \emph{Mass balance}
 \begin{equation}
@@ -118,15 +118,15 @@ For a two dimensional problem, the conservation of momentum needs to be solved i
 &\frac{D( \rho u) }{D t} =-\frac{\partial P}{\partial x} + div(\mu \hspace{1mm} grad\hspace{1mm}u)+S_{Mx}
 \end{split}
 \end{equation}\
-The last conservation equation is the conservation of energy, and can be computed upon use of Equation \ref{EnerBal}.\vspace{2mm}
+The last important equation is the transport of fractions, and can be computed upon use of Equation \ref{fractrans}.\vspace{2mm}
 
-\emph{Energy balance}
+\emph{Fraction transport}
 \begin{equation}
-\label{EnerBal}
-\rho C_p\frac{D T }{D t} = div(k \hspace{1mm}grad\hspace{1mm}T) +S_i 
+\label{fractrans}
+\rho C_p\frac{D f }{D t} = div(k \hspace{1mm}grad\hspace{1mm}f) +S_i 
 \end{equation}
-
-Note that in equation \ref{EnerBal} the heat release by viscous dissipation is assumed to be zero. The viscous dissipation can be neglected if the velocity gradients within the domain are small. (DIT NOG EVEN GOED CHECKEN).\\
+DEZE MOET NOG IETS ANDERS!!!!
+The fraction transport is introduced specifically for this study in order to keep track of the mixing of the flow.  \\
 Since this study regards a turbulent flow, the mass and momentum equations have to be solved in a different manner. This is done by taking the Reynolds average approach. In the Reynolds average approach the mean velocity is determined and the turbulence is described by a fluctuation around the mean velocity. Therefore, components in the convection-diffusion and conservation equations are decomposed in a mean and a fluctuation variable. The decomposed variables are given in Equation \ref{decomposed}.\vspace{2mm}
 
 \emph{Decomposed variables}
@@ -198,7 +198,7 @@ DEZE FUNCTIE NOG EENS NAKIJKEN WANT DIE IS MOEILIJK\\
 \begin{equation}
 \begin{split}
 \label{intergrated}
-&\frac{(\rho_p \rho_p^0)\phi}{\Delta t}\Delta V +[(\rho u A \phi)_e -(\rho u A \phi)_w]+[(\rho u A \phi)_n -\\
+&\frac{(\rho_p^0)\phi}{\Delta t}\Delta V +[(\rho u A \phi)_e -(\rho u A \phi)_w]+[(\rho u A \phi)_n -\\
 &(\rho u A \phi)_s]=\bigg[\bigg(\Gamma A \frac{\partial \phi}{\partial x}\bigg)_e -\bigg(\Gamma A \frac{\partial \phi}{\partial x}\bigg)_w\bigg] +\\
 &\bigg[\bigg(\Gamma A \frac{\partial \phi}{\partial x}\bigg)_n -\bigg(\Gamma A \frac{\partial \phi}{\partial x}\bigg)_s\bigg] + S_u + S_p\phi_p^0
 \end{split}
@@ -217,40 +217,45 @@ Substitution variables $F$ and $D$ into Equation \ref{intergrated} forms Equatio
 \end{equation}
 The coefficients of $a$ are dependent on the differencing scheme. The discretization scheme has some properties. First property is the conservativeness which means the flux $\phi$ leaving a control volume has to be equal to the flux $\phi$ entering the control volume through the same face. By using a hybrid differencing scheme, the conservativeness is automatically satisfied. The second property is the boundedness. The boundedness describes the value of $\phi$ in case there is no source term. In that case, the nodal value of $\phi$ must be equal to the value of $\phi$ at the boundary. Besides the restricted value of $\phi$, the coefficients $a$ of the discretized equation must have equal signs. The last important property is the transportiveness. This requires that the transportiveness changes according to the magnitude of the P\`{e}clet number ($Pe=F/D$). Hence, if Pe is zero, $\phi$ equally diffuses in all directions. The hybrid differencing scheme satisfies the three properties. However, this comes at the price of only first order accuracy \cite{Versteeg2007}. The obtained values for $F$ and $D$ determine the values of the $a$ coefficients. They can be determined as shown in Table \ref{tab:coefsa}.
 \InsTab{coefficients}\\
-The discretized equation can now be solved using the transient SIMPLE algorithm. SIMPLE stands for Semi-Implicit Method for Pressure-Linked Equations. In essential the algorithm is a guess and correct procedure for pressure calculations in a staggered grid which is used \cite{Versteeg2007}. The transient SIMPLE algorithm is used due to the unsteady convection-diffusion equations used to describe the problem. The difference with the regular SIMPLE algorithm is the time $t$, discretized in time steps, $\Delta t$ for which the equations are solved. The transient SIMPLE algorithm works in the following manner. First the variables $u$, $v$, $p$ and $\phi$ are initialized and a time step $\Delta t$ is defined. The time iteration starts at $t_0$ and continues until $t>t_{max}$. VERDERE UITLEG NODIG, EVEN GOED BEKIJKEN HOE DIE SOLVER WERKT
+The discretized equation can now be solved using the transient SIMPLE algorithm. SIMPLE stands for Semi-Implicit Method for Pressure-Linked Equations. In essential the algorithm is a guess and correct procedure for pressure calculations in a staggered grid which is used \cite{Versteeg2007}. The transient SIMPLE algortithm is used due to the unsteady convection-diffusion equations used to describe the problem. The difference with the regular SIMPLE algorithm is the time $t$, discretized in time steps, $\Delta t$ for which the equations are solved. The transient SIMPLE algortithm works in the following manner. First the variables $u$, $v$, $p$ and $\phi$ are initialized and a time step $\Delta t$ is defined. The time itiration starts at $t_0$ and continues untill $t>t_{max}$. VERDERE UITLEG NODIG, EVEN GOED BEKIJKEN HOE DIE SOLVER WERKT
 
 \section{CFD problem}
 This chapter will describe the entire CFD model used during simulations. First of all the geometry will be introduces, after which the applied boundary conditions are explained.
 
-\subsubsection{Geometry}
-Figure \ref{fig:Geometry} shows the geometry used during the research. The rectangular grid with dimensions length, $L$ and width $D$, contains a bluff-body with height and width $h$ and $b$ respectively.
+\subsubsection{Geometry and Cases}
+Figure \ref{fig:Geometry} shows the geometry used during the research. The rectangular domain with dimensions length, $L$ and width $D$, contains a bluff-body with height and width $h$ and $b$ respectively.
 
 \InsFig{FlowGeometry}{Schematic diagram of geometry.}{Geometry}
 
-The size of the bluff body is changer during the simulations for the purpose of finding its influence on the turbulence intensity. The size of the bluff-body will from now on be described with respect to the width of the channel. This can be achieved upon use of $h/D$, wich describes the dimensionless size.\\
+For this research numerous cases are investigated. Since the main purpose is to find the influence of a bluff body on the mixing in a turbulent flow. The geometry of the bluff-body is varied from. The size of the bluff body is defined as $h/D$. The size is varied in three steps, linearly scaling from from \textbf{h/D = XX} to \textbf{h/D = XX2}. These results are compared to a flow without a bluff-body.\\
+Besides varying the bluff-body size, the entrance turbulence intensity $T_i$ and the inlet velocity $U_{in}$ are varied. 
 
 
+Throughout the simulations the viscosity, turbulence entrance intensity and length scale and the density are not altered.
 
-\subsubsection{General boundary conditions}
-To compose a realistic problem one needs to define boundary conditions. Since this study focusses on turbulent flows only, the applied boundary conditions are solely turbulent as well. This section will cover the boundary conditions applied to the general domain. The next Section \ref{bluffBC} will cover the boundary conditions applied to the bluff body.  will  First of all A fully developed turbulent profile enters the geometry at the left side. This boundary condition is applied to reduce computational time. Without the fully developed inlet profile, the flow needs some time to adapt to a fully developed profile, which demands computational power. The inlet boundary condition can be applied with help of Equation \ref{inletBC}, called the power law velocity profile. \vspace{2mm}
+
+\subsubsection{Boundary conditions}
+Boundary conditions are prescribed to this CFD problem. Since this study focussus on tubulent flows only, the applied boundary conditions are solely turbulent as well. First of all A fully developed turbulent profile enters the geometry at the left side. This boundary condition is applied to reduce computational time. Without the fully developed inlet profile, the flow needs some time to adapt to a fully developed profile, which demands computational power. The inlet boundary condition can be applied with help of Equation \ref{inletBC}, called the power law velocity profile. \vspace{2mm}
 
 \emph{Power law velocity profile}
 \begin{equation}
 \label{inletBC}
 u(y) = \begin{cases} U_{IN}\cdot \big[\frac{y}{D/2}\big]^{1/n}, & \mbox{if } y\leq\frac{D}{2} \\ U_{IN}\cdot \big[2-\frac{y}{D/2}\big]^{1/n}, & \mbox{if } y>\frac{D}{2}\end{cases}
 \end{equation}
-The equation is constructed of a lower and upper half since the geometry has its origin in the lower left corner. In the equation $D$ is defined as the maximum height in the channel, $U_{IN}$ is the maximum inlet velocity. The height of the profile can be altered by a change in $U_{IN}$. The power $n$ is chosen to be 7, which is a value suited for a wide range of turbulent flows \cite{Morrison}. Figure \ref{fig:Inlet} shows the analytical inlet, as presented in Equation \ref{inletBC}, the inlet profile as extracted from the simulation and the profile at the exit of the geometry as extracted from the simulation. The entire domain is initialized to a temperature of 273$K$.
+The equation is constructed of a lower and upper half since the geometry has its origin in the lower left corner. In the equation $D$ is defined as the maximum height in the channel, $U_{IN}$ is the maximum inlet velocity. The height of the profile can be altered by a change in $U_{IN}$. The power $n$ is chosen to be 7, which is a value suited for a wide range of turbulent flows \cite{Morrison}. Figure \ref{fig:Inlet} shows the analytical inlet, as presented in Equation \ref{inletBC}, the inlet profile as extracted from the simulation and the profile at the exit of the geometry as extracted from the simulation.
 
 \InsFig{InletBC}{Schematic diagram of geometry.}{Inlet}
 
-One can clearly see the agreement of the analytical expression for the inlet profile with the numerical result at the inlet. The outlet however, shows a slight deviation from the inlet condition. This is due to the fact that the analytical expression is an approximation of the turbulent profile.\\
-To obtain accurate results one has to define values for the turbulent kinetic energy and dissipation rate at the inlet of the geometry. The inlet values can be calculated upon use of Equation \ref{kepsBC}.
+One can clearly see the agreement of the analytical expression for the inlet profile with the numerical result at the inlet. The outlet however, shows a sligth deviation from the inlet condition. This is due to the fact that the analytical expression is an approximation of the turbulent profile.\\
+The second prescribed condition is the kinetic energy and dissipation rate at the inlet of the geometry. The inlet values can be calculated upon use of Equation \ref{kepsBC}.
 
 \begin{equation}
 \label{kepsBC}
 \kappa_{IN}=\frac{2}{3}(U_{IN}T_i)^2,\hspace{4mm}\epsilon_{IN}=C_{\mu}^0.25\frac{\kappa_{IN}^{1/3}}{0.035 D}
 \end{equation}
 In these equations $T_i$ is the turbulent intensity, set to a value of 4\%. The value for $T_i$ for the inlet boundary is in general taken between 1\% and 6\% \cite{Versteeg2007}.\\
+Since the focus is of this problem is about the mixing quality of a turbulent flow, an important initial condition is the fractions inside the geometry. Initially the entire bottom half of the domain has a fraction $f=1$ and the top half $f=0$. If the fluid were to be perfectly mixed at the exit, the exit fraction would be $f=0.5$. Therefore, the fraction is a direct measure for the mixing quality.\\
+
 At both top and bottom walls of the geometry the axial velocity is set to $u=0[m\cdot s^{-1}]$. Since the flow is turbulent not only the value at the boundary itself should be restricted, but also the so called near wall region. These regions need wall functions to describe the flow near the walls. Closest to the walls there is a viscous sub-layer. Within this layer the eddies decrease in size and dissipate their energy due to viscous forces dominating in this area. When one looks more towards the centre of the geometry a log-law layer appears. In order to implement such conditions one needs to introduce $y^+$ and $u^+$, as seen in Equation \ref{yplusuplus} \cite{Versteeg2007}.
 
 \begin{equation}
@@ -282,10 +287,9 @@ The shear stress in the log-law area, used to calculate $y^+$, is determined upo
 
  At the exit of the geometry the gradient of velocity and temperature in both $u$ and $y$ directions set to zero. This is done in order to comply with the mass balance equation since otherwise mass may disappear through the exit.\\
 
-\subsubsection{Bluff-body boundary conditions} \label{bluffBC}
-The walls of the bluff body are treated in the same manner as explained in the previous section. Additional to that, the grid cells inside the bluff body are set to zero values by prescribing $S_p=-10^{30}$. The temperature of the bluff body is prescribed at the walls, and can be changed. MOETEN WE OOK DIE KAPPA EN EPSILON UITLEGGEN BIJ DEZE BOUNDARY CONDITIONS?????
+The velocity boundary conditions at the walls of the bluff body are treated in the same manner as explained in the previous section. Additional to that, the velocities inside the bluff body are set to zero values by prescribing $S_p=-10^{30}$. Additionally, at each of the faces of the bluff body, the $a$ coefficient is set to zero. \\
 
- 
+
 \section{Results}
 The results of using the \LaTeX template is a great looking paper.
 In Figures \ref{fig:Geometry} and \ref{fig:Geometry} it can be seen how figures are easily included.
